[package]
name = "simple_big_int"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "Simple library to create and work with dynamically sized integers"
homepage = "https://etnur.com"
repository = "https://github.com/samothx/permutations/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]
rand= "0.8.5"
